need to fix footer and spacing

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,22 +1,18 @@
-.navbar-lewagon {
-  justify-content: space-between;
+.navbar-minimalist {
+  height: 70px;
   background: white;
-  // font-family: serif; find a better one
-  position: relative;
+  box-shadow: 0px -2px 10px rgba(0,0,0,0.3);
   display: flex;
-  flex-wrap: wrap;
+  justify-content: space-around;
   align-items: center;
+  margin-top: -16px;
+}
+.navbar-minimalist img {
+  width: 50px;
+  height: 50px;
 }
 
-.navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
-}
-
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
-}
-
-.navbar-lewagon {
+.navbar-minimalist {
   .fa-glass-cheers {
     color: rgba(167, 10, 83, 0.719);
   }
